--- a/css/styles.css
+++ b/css/styles.css
@@ -136,10 +136,10 @@ padding-top: 10px;
 .navbar{
 
 }
-  
+/*   
   footer{
     display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  }
+  } */
